--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </form>
         </div>
     </div>
-    <div id="footer" data-aos="zoom-in-up">
+    <div id="footer" >
         <div class="container">
             <div class="row">
                 <div class="col" >
