--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="col-lg-7">
                     <div id="profile-info-right">
                         <div class="profile-info-box1" data-aos="zoom-in-up">
-                            <img src="ithome.jpg" alt="" width="350px" height="600px">
+                            <img src="img2.jpg" alt="" width="350px" height="600px">
                         </div>
                     </div>
                 </div>
