--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="col-lg-5">
                     <div id="personal-info-section"  >
                         <h3 data-aos="zoom-in-up">Hello , It's Me</h3>
-                        <h1 data-aos="zoom-in-left">SHEEBAN HASAN  </h1>
+                        <h1 data-aos="zoom-in-left">SHEEBAN HASAN</h1>
                         <h2 data-aos="zoom-in-down">And I'm a <span class="multiple-text2"></span></h2>
                         <p data-aos="zoom-in-right">A challenging Career which offers an opportunity to apply my skills knowledge with
                         continues learning and growth . </p>
@@ -215,7 +215,7 @@
         backDelay:1000,
         loop:true
     });
-    const typed = new Typed('.multiple-text2',{
+    const typed2 = new Typed('.multiple-text2',{
         strings: ['Web Developer!','Software Developer!'],
         typeSpeed:100,
         backSpeed:100,
