--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     
-    <div class="bg-image container-fluid"></div>
+    <div class="bg-image"></div>
     
     <div class="bg-text">
         <h1 style="font-size:50px">I am <span>Sheeban Hasan!</span></h1>
