--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <div id="project">
         <div class="container">
             <div class="row">
-                <div id="service-logo" data-aos="flip-up">
+                <div id="project-logo" data-aos="flip-up">
                     <span>Project</span>
                 </div>
                 <div class="col-md-6 col-lg-4">
