--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
                 <div id="project-logo" data-aos="flip-up">
                     <span>Project</span>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4" data-aos="flip-left">
                     <div class="card my-3">
     
                         <img src="championsportal.png" class="card-image-top" alt="thumbnail">
     
-                        <div class="card-body" data-aos="flip-left">
+                        <div class="card-body">
                             <h3 class="card-title"><a href="#" class="text-secondary">What is ChampionsPortal</a></h3>
                             <p class="card-text">Champions™ Is An Online Learning And Assessment Platform That Helps You Learn Faster Using Gamification,  Friendly Competition And Rewards.</p>
                             <a href="https://championsportal.net/" target="_blank" class="btn btn-primary">Read More</a>
