--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                         <a href="#home" style="--i:1;">Home</a>
                         <a href="#about" style="--i:2;">About</a>
                         <a href="#service" style="--i:3;">Service</a>
-                        <a href="#contact" style="--i:4;">Contact</a>
+                        <a href="#project" style="--i:4;">Project</a>
+                        <a href="#contact" style="--i:5;">Contact</a>
                     </nav>
                 </div>
             </div>
