--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <a href="tel:+919045135069"> <i class="fa-solid fa-phone" style="--i:8;"></i></a>
                         </div>
                         <div id="cv" >
-                            <a href="SHEEBAN HASAN.pdf" download ><button data-aos="zoom-in-up">Download CV <i class="fa-solid fa-download"></i></button></a>
+                            <a href="SHEEBAN HASAN (2).pdf" download ><button data-aos="zoom-in-up">Download CV <i class="fa-solid fa-download"></i></button></a>
                         </div>
                     </div>
                 </div>
