--- a/index.html
+++ b/index.html
@@ -202,6 +202,18 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-md-6 col-lg-4" data-aos="flip-left">
+                    <div class="card my-3">
+    
+                        <img src="hdaa.png" class="card-image-top" alt="thumbnail">
+                        <div class="card-body">
+                            <h3 class="card-title"><a href="#" class="text-secondary">What is HDAA</a></h3>
+                            <p class="card-text">HDAA utilises the collective knowledge, energy, experience and expertise of our team and our members to create a foundation on which we deliver products and services that develop and promote excellence in the Service and Support Profession. </p>
+                            <a href="https://hdaa.com.au/" target="_blank" class="btn btn-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
