--- a/index.html
+++ b/index.html
@@ -227,14 +227,14 @@
                     <span>Contact</span>
                 </div>
             </div>      
-            <div class="row justify-content-center">
+            <div class="row justify-content-center"  data-aos="zoom-in-up">
 				<div class="col-lg-10 col-md-12">
 					<div class="wrapper">
 						<div class="row no-gutters">
 							<div class="col-md-7 d-flex align-items-stretch">
 								<div class="contact-wrap w-100 p-md-5 p-4">
 									<h3 class="mb-4">Send mail</h3>
-									<form action="https://formspree.io/f/meqddeqw"  method="POST" data-aos="flip-right">										<div class="row">
+									<form action="https://formspree.io/f/meqddeqw"  method="POST">										<div class="row">
 											<div class="col-md-6">
 												<div class="form-group">
 													<input type="text" class="form-control" name="name" id="name"
