--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </div>
             </div>      
             <div class="content">
-        <div class="left-side">
+        <div class="left-side" id="form">
           <div class="address details">
             <i class="fas fa-map-marker-alt"></i>
             <div class="topic">Address</div>
