--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>      
             <div class="content">
         <div id="form" data-aos="flip-right">
-            <div class="left-side" id="form">
+            <div class="left-side">
               <div class="address details">
                 <i class="fas fa-map-marker-alt"></i>
                 <div class="topic">Address</div>
