--- a/index.html
+++ b/index.html
@@ -226,46 +226,44 @@
                     <span>Contact</span>
                 </div>
             </div>      
-            <div class="content">
-        <div id="form" data-aos="flip-right">
-            <div class="left-side">
-              <div class="address details">
-                <i class="fas fa-map-marker-alt"></i>
-                <div class="topic">Address</div>
-                <div class="text-one">Ghaziabad, UP</div>
-                <div class="text-two">India</div>
-              </div>
-              <div class="phone details">
-                <i class="fas fa-phone-alt"></i>
-                <div class="topic">Phone</div>
-                <div class="text-one">+91 9045135069</div>
-              </div>
-              <div class="email details">
-                <i class="fas fa-envelope"></i>
-                <div class="topic">Email</div>
-                <div class="text-one">sheebanhasan7@gmail.com</div>
-              </div>
-            </div>
-            <div class="right-side">
-              <div class="topic-text">Send us a message</div>
-              <p>If you have any work from me or any types of quries related to my tutorial, you can send me message from here. It's my pleasure to help you.</p>
-              <form action="https://formspree.io/f/meqddeqw"  method="POST" >
-                <div class="input-box">
-                  <input type="text" placeholder="Enter your name" />
+            <div class="content" id="form" data-aos="flip-right">
+                <div class="left-side">
+                  <div class="address details">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <div class="topic">Address</div>
+                    <div class="text-one">Ghaziabad, UP</div>
+                    <div class="text-two">India</div>
+                  </div>
+                  <div class="phone details">
+                    <i class="fas fa-phone-alt"></i>
+                    <div class="topic">Phone</div>
+                    <div class="text-one">+91 9045135069</div>
+                  </div>
+                  <div class="email details">
+                    <i class="fas fa-envelope"></i>
+                    <div class="topic">Email</div>
+                    <div class="text-one">sheebanhasan7@gmail.com</div>
+                  </div>
                 </div>
-                <div class="input-box">
-                  <input type="text" placeholder="Enter your email" />
+                <div class="right-side">
+                  <div class="topic-text">Send us a message</div>
+                  <p>If you have any work from me or any types of quries related to my tutorial, you can send me message from here. It's my pleasure to help you.</p>
+                  <form action="https://formspree.io/f/meqddeqw"  method="POST" >
+                    <div class="input-box">
+                      <input type="text" placeholder="Enter your name" />
+                    </div>
+                    <div class="input-box">
+                      <input type="text" placeholder="Enter your email" />
+                    </div>
+                    <div class="input-box message-box">
+                      <textarea placeholder="Enter your message"></textarea>
+                    </div>
+                    <div class="button">
+                      <input type="button" value="Send Now" />
+                    </div>
+                  </form>
                 </div>
-                <div class="input-box message-box">
-                  <textarea placeholder="Enter your message"></textarea>
-                </div>
-                <div class="button">
-                  <input type="button" value="Send Now" />
-                </div>
-              </form>
-            </div>
-        <div>
-      </div>
+          </div>
         </div>
     </div>
 
