--- a/index.html
+++ b/index.html
@@ -225,8 +225,9 @@
                 <div id="contact-logo" data-aos="flip-up">
                     <span>Contact</span>
                 </div>
-            </div>      
-            <div class="content" id="form" data-aos="flip-right">
+            </div>  
+            <div id="form" data-aos="flip-right">
+            <div class="content">
                 <div class="left-side">
                   <div class="address details">
                     <i class="fas fa-map-marker-alt"></i>
@@ -263,6 +264,7 @@
                     </div>
                   </form>
                 </div>
+            </div>
           </div>
         </div>
     </div>
