--- a/index.html
+++ b/index.html
@@ -231,18 +231,18 @@
             <div class="content">
                 <div class="left-side">
                   <div class="address details">
-                    <i class="fas fa-map-marker-alt"></i>
+                    <i class="fa-solid fa-location-dot"></i>
                     <div class="topic">Address</div>
                     <div class="text-one">Ghaziabad, UP</div>
                     <div class="text-two">India</div>
                   </div>
                   <div class="phone details">
-                    <i class="fas fa-phone-alt"></i>
+                    <i class="fa-solid fa-phone"></i>
                     <div class="topic">Phone</div>
                     <div class="text-one">+91 9045135069</div>
                   </div>
                   <div class="email details">
-                    <i class="fas fa-envelope"></i>
+                    <i class="fa-solid fa-envelope"></i>
                     <div class="topic">Email</div>
                     <div class="text-one">sheebanhasan7@gmail.com</div>
                   </div>
