--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <span>Contact</span>
                 </div>
             </div>  
-            <div class="row">
+            <div class="row" style="justify-content: center;">
                 <div id="form" data-aos="flip-right">
                     <div class="content">
                         <div class="left-side">
