--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 col-lg-4" id="project-card" data-aos="flip-left">
+                <div class="col-md-6 col-lg-4" id="project-card" data-aos="flip-down">
                     <div class="card my-3">
     
                         <img src="hdaa.png" class="card-image-top" alt="thumbnail">
