--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                               <textarea placeholder="Enter your message"></textarea>
                             </div>
                             <div class="button">
-                              <input type="button" value="Send Now" />
+                              <input type="submit" value="Send Now" />
                             </div>
                           </form>
                         </div>
