--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </div>
             </div>  
             <div class="row" style="justify-content: center;">
-                <div id="form" data-aos="flip-right">
+                <div id="form" data-aos="flip-up">
                     <div class="content">
                         <div class="left-side">
                           <div class="address details">
