--- a/index.html
+++ b/index.html
@@ -244,13 +244,13 @@
                           <p>If you have any work from me or any types of quries related to my tutorial, you can send me message from here. It's my pleasure to help you.</p>
                           <form action="https://formspree.io/f/meqddeqw"  method="POST" >
                             <div class="input-box">
-                              <input type="text" placeholder="Enter your name" />
+                              <input type="text" name="name" placeholder="Enter your name" />
                             </div>
                             <div class="input-box">
-                              <input type="text" placeholder="Enter your email" />
+                              <input type="text" name="email" placeholder="Enter your email" />
                             </div>
                             <div class="input-box message-box">
-                              <textarea placeholder="Enter your message"></textarea>
+                              <textarea name="message" placeholder="Enter your message"></textarea>
                             </div>
                             <div class="button">
                               <input type="submit" value="Send Now" />
