--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div id="personal-info-section" >
-                        <h3 data-aos="zoom-in-up">Hello , It's Me</h3>
+                        <h3 data-aos="zoom-in-up">Hello, It's Me</h3>
                         <h1 data-aos="zoom-in-left">SHEEBAN HASAN</h1>
-                        <h2 data-aos="zoom-in-down">And I'm a <span class="multiple-text2"></span></h2>
+                        <h2 data-aos="zoom-in-down">And I'm a <span class="multiple-text"></span></h2>
                         <p data-aos="zoom-in-right">A challenging Career which offers an opportunity to apply my skills knowledge with
                         continues learning and growth . </p>
                         <div class="social-media" data-aos="zoom-in-up">
@@ -289,13 +289,6 @@
 <script src="https://unpkg.com/typed.js@2.0.14/dist/typed.umd.js"></script>
 <script>
     const typed = new Typed('.multiple-text',{
-        strings: ['Web Developer!','Software Developer!'],
-        typeSpeed:100,
-        backSpeed:100,
-        backDelay:1000,
-        loop:true
-    });
-    const typed2 = new Typed('.multiple-text2',{
         strings: ['Web Developer!','Software Developer!'],
         typeSpeed:100,
         backSpeed:100,
